Fixed spacing

--- a/project/calendar.css
+++ b/project/calendar.css
@@ -1,3 +1,6 @@
+
+
+
 .container {
     width: 100%;
     height: 100vh;
@@ -56,7 +59,7 @@
     font-size: 3.2rem;
     font-weight: 400;
     letter-spacing: 0.1rem;
-    width: calc(100rem / 7);
+    width: calc(90rem / 7);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,7 +76,7 @@
 .days div {
     font-size: 3rem;
     margin: 0.3rem;
-    width: calc(80.2rem / 7);
+    width: calc(98rem / 10);
     height: 5rem;
     display: flex;
     justify-content: center;
